--- a/app/src/main/res/menu/menu_lista_alunos.xml
+++ b/app/src/main/res/menu/menu_lista_alunos.xml
@@ -3,9 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ListaAlunosActivity">
-    <item android:id="@+id/menu_enviar_notas"
+    <item
+        android:id="@+id/menu_enviar_notas"
         android:title="Enviar Notas"
         android:icon="@drawable/ic_enviar"
+        app:showAsAction="always"/>
+
+    <item
+        android:id="@+id/baixar_provas"
+        android:title="Baixar Provas"
+        android:icon="@drawable/ic_receber"
         app:showAsAction="always"/>
 
 </menu>
